Fix header cutting on iPhone

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -24,20 +24,15 @@ p {
     border-radius: 50%;
     border: 3px solid #333447;
     display: block;
-    margin-left: auto;
-    margin-right: auto;
     width: 190px;
 }
 
-.layout {
-    position: relative;
-    height: 100%;
-}
-
-.container {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-}
+@media only screen and (min-width: 33.75em) {  /* 540px */
+    .container {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        -ms-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
+    }
+  }
